--- a/Areas/AdminManagement/Views/BookingServices/Index.cshtml
+++ b/Areas/AdminManagement/Views/BookingServices/Index.cshtml
@@ -86,7 +86,7 @@
         {
             <tr>
                 <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
-                <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
+                <td>@String.Format("{0:N0} VND", item.TotalPrice)</td>
                 <td>@item.Booking.BookingId - @item.Booking.Customer.Username</td>
                 <td>@Html.DisplayFor(modelItem => item.Service.ServiceName)</td>
                 <td>
