--- a/Areas/AdminManagement/Views/Fields/Index.cshtml
+++ b/Areas/AdminManagement/Views/Fields/Index.cshtml
@@ -87,7 +87,7 @@
                     @Html.DisplayFor(modelItem => item.Capacity)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Price)
+                    @String.Format("{0:N0}", item.Price) VND
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.FieldId" class="btn">Chỉnh Sửa</a> 
